chore: adjust some configuration

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(SecureMe main.cpp)
+add_executable(secureme main.cpp)
 
-target_link_libraries(SecureMe ${SECCOMP_LIB})
-target_include_directories(SecureMe PRIVATE ${SECCOMP_INCLUDE_DIR})
+target_link_libraries(secureme ${SECCOMP_LIB})
+target_include_directories(secureme PRIVATE ${SECCOMP_INCLUDE_DIR})
