--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
-[submodule "src/cxxopts"]
-	path = src/cxxopts
+[submodule "lib/cxxopts"]
+	path = lib/cxxopts
 	url = git@github.com:jarro2783/cxxopts.git
-[submodule "src/yaml-cpp"]
-	path = src/yaml-cpp
+[submodule "lib/yaml-cpp"]
+	path = lib/yaml-cpp
 	url = git@github.com:jbeder/yaml-cpp.git
-[submodule "src/spdlog"]
-	path = src/spdlog
+[submodule "lib/spdlog"]
+	path = lib/spdlog
 	url = git@github.com:gabime/spdlog.git
+[submodule "lib/googletest"]
+	path = lib/googletest
+	url = git@github.com:google/googletest.git
